Add gap above disktree section.

--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -481,9 +481,11 @@ summary {
 }
 
 #disktree {
+  margin-top: 2em;
+  border-top: 1px solid #000;
   display: grid;
   width: 100%;
-  gap: 0.5em 1em;
+  gap: 1em;
   grid-template-columns: 1fr auto;
 }
 
