--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -451,7 +451,7 @@ summary {
   display: grid;
   width: 100%;
   gap: 0.5em 1em;
-  grid-template-columns: auto auto auto 1fr min-content;
+  grid-template-columns: auto auto auto auto 1fr;
   grid-auto-rows: min-content;
   justify-items: start;
 }
@@ -472,6 +472,7 @@ summary {
 #scatter {
   grid-column: 5;
   grid-row: 1 / 10;
+  margin-left: 2em;
 }
 
 #scatter use {
@@ -587,9 +588,9 @@ th,
 
     --graphQuota: #00c9cf;
     --graphUsage: #fb8c80;
-    --graphBack: #ddd;
+    --graphBack: #efefef;
 
-    --inputAccent: #074987;
+    --inputAccent: #428bca;
 
     --minmaxRangeBG: var(--inputAccent);
     --minmaxRangeFont: #fff;
