--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -4,6 +4,8 @@ html {
 
 body {
   padding: 0 0.25em;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
 }
 
 html,
@@ -266,7 +268,7 @@ rect+use+text {
 
 #details th {
   text-align: left;
-  width: 4em;
+  width: 5em;
 }
 
 #details td div {
