--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -477,7 +477,7 @@ summary {
   border: 1px solid var(--subtleBorder);
   border-top-right-radius: 8px;
   background-color: var(--background);
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M70,0 v100 l-50,-50 z' fill='%23000' /%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 10'%3E%3Cpath d='M7,0 v10 l-5,-5 z' fill='black' /%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 1em 1em;
@@ -488,7 +488,7 @@ summary {
 }
 
 .boxed[open] summary:after {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M0,30 h100 l-50,50 z' fill='%23000' /%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 10'%3E%3Cpath d='M0,3 h10 l-5,5 z' fill='black' /%3E%3C/svg%3E");
 }
 
 .boxed:not([open]) summary:after {
@@ -742,10 +742,10 @@ th,
   }
 
   .boxed summary:after {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M70,0 v100 l-50,-50 z' fill='%23fff' /%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 10'%3E%3Cpath d='M7,0 v10 l-5,-5 z' fill='white' /%3E%3C/svg%3E");
   }
 
   .boxed[open] summary:after {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M0,30 h100 l-50,50 z' fill='%23fff' /%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 10 10'%3E%3Cpath d='M0,3 h10 l-5,5 z' fill='white' /%3E%3C/svg%3E");
   }
 }
