Match left and right gap for treemap options box.

--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -532,6 +532,10 @@ summary {
   grid-column: 2 / span 3;
 }
 
+#disktree .treeFilter {
+  margin-right: 1.5em;
+}
+
 #scatter use {
   cursor: pointer;
 }
