--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -1,9 +1,5 @@
-html {
-  margin: 0;
-}
-
 body {
-  padding: 0 0.25em;
+  padding: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
 }
@@ -12,6 +8,7 @@ html,
 body {
   color: var(--colour);
   background-color: var(--background);
+  margin: 0;
 }
 
 input[type=radio],
@@ -20,8 +17,8 @@ input[type=checkbox] {
 }
 
 #auth {
-  text-align: right;
-  padding-bottom: 1em;
+  position: absolute;
+  right: 0;
 }
 
 #usageTable {
@@ -462,7 +459,7 @@ summary {
 .boxed {
   border: 1px solid var(--subtleBorder);
   border-radius: 8px;
-  margin-bottom: 1em;
+  margin: 1em;
 }
 
 .boxed summary {
