Add simple max-height to groups multi-select (will need to adjust the actual height).

--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -393,6 +393,11 @@ rect+use+text {
   display: inline-block;
 }
 
+#multi_unix {
+  max-height: 100px;
+  overflow: hidden;
+}
+
 .multiInput ul {
   margin: 0;
   padding: 0;
