Simplify usage table width.

--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -23,7 +23,7 @@ input[type=checkbox] {
 
 #usageTable {
   table-layout: fixed;
-  width: calc(100vw - 3em);
+  width: 100%;
 }
 
 #usageTable tbody {
