--- a/server/static/wrstat/src/index.css
+++ b/server/static/wrstat/src/index.css
@@ -776,11 +776,15 @@ button.download:first-of-type {
 
 .exceed,
 .exceeded {
-  margin-top: 1em;
+  padding: 1em;
+}
+
+.exceeded {
+  color: var(--exceedWarning);
+  font-weight: bold;
 }
 
 .exceed {
-  font-weight: bold;
   color: color-mix(in srgb, currentColor var(--warningProx), var(--exceedWarning));
 }
 
